getting_started/test_files/syntax_errors/TopLevelMethod.cpm
helper(x: int): int {
  return x
}

main(): int {
  return 0
}
